--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
 
 
     </main>
-    <footer>
-
-    </footer>
+    <footer class="blockquote-footer"> Pre-Entrega 3<cite title="Source Title"> Juan Pablo Orellana</cite></footer>
     <script src="./main.js"></script>
 </body>
 
