actualizacion de los formatos de los numeros

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             aria-describedby="inputGroup-sizing-default" placeholder="100.000 a 10.000.000">
                     </div>
                 </form>
-                <button id="btnPrincipal" class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                <button id="btnPrincipal" class="btn btn-primary btnSimular" type="button" data-bs-toggle="collapse"
                     data-bs-target="#multiCollapseExample2" aria-expanded="false"
                     aria-controls="multiCollapseExample2">Simular</button>
                 <div class="col">
@@ -69,12 +69,9 @@
 
             </div>
         </div>
-        <!-- <button id="btnPrincipal" type="button" class="btn btn-primary btn-lg m-3">Calcular</button> -->
-
-
 
     </main>
-    <footer class="blockquote-footer"> Pre-Entrega 3<cite title="Source Title"> Juan Pablo Orellana</cite></footer>
+    <footer class="blockquote-footer piePagina"> Pre-Entrega 3<cite class="piePagina" title="Source Title"> Juan Pablo Orellana</cite></footer>
     <script src="./main.js"></script>
 </body>
 
