actualización de la presentacion de los numeros

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         </div>
 
     </main>
-    <footer class="blockquote-footer piePagina"> Pre-Entrega 3<cite class="piePagina" title="Source Title"> Juan Pablo Orellana</cite></footer>
+    <footer class="blockquote-footer piePagina"> Pre-Entrega 3<cite class="piePagina" title="Source Title"> Juan Pablo
+            Orellana</cite></footer>
     <script src="./main.js"></script>
 </body>
 
