--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="p-3 input-group mb-3  ">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Cantidad de cuotas</span>
+                        <span class="input-group-text" id="inputGroup-sizing-default">Cantidad de cuotas :</span>
                         <input id="cuotas" type="text" class="form-control" aria-label="Sizing example input"
                             aria-describedby="inputGroup-sizing-default" placeholder="6 a 60 cuotas">
                     </div>
