--- a/index.html
+++ b/index.html
@@ -24,33 +24,33 @@
                 <form id="miFormulario" class="card-body">
                     <div class=" p-3 input-group mb-3">
                         <span class=" input-group-text">Rut :</span>
-                        <input id="rut" type="text" class="form-control" aria-label="Sizing example input"
+                        <input id="rut" type="text" class="form-control opacity-50" aria-label="Sizing example input"
                             aria-describedby="inputGroup-sizing-default" placeholder="12345678-9">
                     </div>
                     <div class="p-3 input-group mb-3  ">
                         <span class="input-group-text" id="inputGroup-sizing-default">Nombre :</span>
-                        <input id="nombre" type="text" class="form-control" aria-label="Sizing example input"
+                        <input id="nombre" type="text" class="form-control opacity-50" aria-label="Sizing example input"
                             aria-describedby="inputGroup-sizing-default" placeholder="Juan Munoz">
                     </div>
                     <div class="p-3 input-group mb-3  ">
                         <span class="input-group-text" id="inputGroup-sizing-default">Correo :</span>
-                        <input id="correo" type="text" class="form-control" aria-label="Sizing example input"
+                        <input id="correo" type="text" class="form-control opacity-50" aria-label="Sizing example input"
                             aria-describedby="inputGroup-sizing-default" placeholder="juan.munoz@mail.com">
                     </div>
                     <div class="p-3 input-group mb-3  ">
                         <span class="input-group-text" id="inputGroup-sizing-default">Renta :</span>
-                        <input id="renta" type="text" class="form-control" aria-label="Sizing example input"
+                        <input id="renta" type="text" class="form-control opacity-50" aria-label="Sizing example input"
                             aria-describedby="inputGroup-sizing-default" placeholder="1.000.000">
                     </div>
 
                     <div class="p-3 input-group mb-3  ">
                         <span class="input-group-text" id="inputGroup-sizing-default">Cantidad de cuotas :</span>
-                        <input id="cuotas" type="text" class="form-control" aria-label="Sizing example input"
+                        <input id="cuotas" type="text" class="form-control opacity-50" aria-label="Sizing example input"
                             aria-describedby="inputGroup-sizing-default" placeholder="6 a 60 cuotas">
                     </div>
                     <div class="p-3 input-group mb-3  ">
                         <span class="input-group-text" id="inputGroup-sizing-default">Dinero a solicitar :</span>
-                        <input id="dineroASolicitar" type="text" class="form-control" aria-label="Sizing example input"
+                        <input id="dineroASolicitar" type="text" class="form-control opacity-50" aria-label="Sizing example input"
                             aria-describedby="inputGroup-sizing-default" placeholder="100.000 a 10.000.000">
                     </div>
                 </form>
