nombre del proyecto

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
                     </div>
                     <div class="p-3 input-group mb-3  ">
                         <span class="input-group-text" id="inputGroup-sizing-default">Dinero a solicitar :</span>
-                        <input id="dineroASolicitar" type="text" class="form-control miInput" aria-label="Sizing example input"
-                            aria-describedby="inputGroup-sizing-default" placeholder="100.000 a 10.000.000">
+                        <input id="dineroASolicitar" type="text" class="form-control miInput"
+                            aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"
+                            placeholder="100.000 a 10.000.000">
                     </div>
                 </form>
                 <button id="btnPrincipal" class="btn btn-primary btnSimular" type="button" data-bs-toggle="collapse"
@@ -71,8 +72,11 @@
         </div>
 
     </main>
-    <footer class="blockquote-footer piePagina"> Pre-Entrega 3<cite class="piePagina" title="Source Title"> Juan Pablo
-            Orellana</cite></footer>
+    <footer>
+        <strong class="contenedores">Pre-Entrega 3 Juan Pablo
+            Orellana.
+        </strong>
+    </footer>
     <script src="./main.js"></script>
 </body>
 
