ACTUALIZACION DEL index

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </main>
     <footer>
-        <strong class="contenedores">Pre-Entrega 3 Juan Pablo
+        <strong class="contenedores"> Entrega Final  Juan Pablo
             Orellana.
         </strong>
     </footer>
