--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 
 <body>
@@ -75,7 +77,7 @@
         </div>
     </main>
     <footer>
-        <strong class="contenedores"> Entrega Final  Juan Pablo
+        <strong class="contenedores"> Entrega Final Juan Pablo
             Orellana.
         </strong>
     </footer>
